--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,10 +25,20 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>莱德斯罗杯橄榄球赛 超过4.6万名新西兰球迷入场观赛</h3>
+<p>在周日（10月18日）橄榄球布莱德斯罗杯（Bledisloe Cup）的第二场比赛中，新西兰队以27比7击败澳大利亚队。这场比赛的伊甸园球场出现了近乎满员的46,049名观众，这在2020年中是个不寻常的景象。</p>
+<p>上周日（10月11日）的第一场比赛在新西兰惠灵顿的天空体育场进行，吸引了31,000名球迷，澳大利亚队以16比16的比分战平新西兰队。</p>
+<p>布莱德斯罗杯的第三和第四场比赛将于10月31日在澳大利亚悉尼和11月7日在墨尔本举行，这将是一场只有新西兰队和澳大利亚队之间的比赛。</p>
+<p>此前，新西兰橄榄球协会预计本周日第二届布莱德洛伊杯对阵澳大利亚队的比赛将吸引47000名观众入场。比赛前已经有4万张门票被抢购一空。</p>
+<p>奥克兰的Covid-19限制措施在8月小范围爆发中共病毒病例后重新进入封锁状态，在本月初被解除，允许人群返回体育场。</p>
+<p>伊甸园公园（Eden Park）是世界上为数不多的运动场之一，在周末举办了一场近乎满员赛事。</p>
+<p>新西兰全黑队自2003年以来一直保持着这项赛事冠军。</p>
+<figure id="attachment_12486116" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1280873737.jpg"><img src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1280873737-600x400.jpg" alt="" width="600" b="400" class="size-large wp-image-12486116" /></a><figcaption class="wp-caption-text">图为2020年10月18日在新西兰奥克兰伊甸园公园举行的Bledisloe Cup比赛中，新西兰全黑队与澳大利亚袋鼠队于赛中争夺。(Photo by Anthony Au-Yeung/Getty Images)</figcaption></figure>
 <h3>国泰航空今年前9个月载客量同比下降83%</h3>
 <p>总部位于香港的国泰航空周一发布公告，2020年前9个月，搭乘国泰航空的乘客数量较去年同期下降了83.2%。</p>
 <p>国泰航空的首席客户和商务官罗纳德·林（Ronald Lam）表示，他预计国泰航空在2020年余下的时间里，将以大流行病之前的客运航班运力的10%左右运营，明年全年的运力将低于50%。</p>
 <p>他说：“我们假设明年上半年的运营能力将远低于大流行病之前的运力的四分之一，但在下半年将会看到复苏——只是假设目前正在开发的疫苗被证明是有效的，并在2021年夏季之前被我们的主要市场广泛采用。”</p>
+<figure id="attachment_6162846" style="width: 444px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2008/05/805310647011164.jpg"><img src="https://i.epochtimes.com/assets/uploads/2008/05/805310647011164.jpg" alt="" width="444" b="594" class="size-full wp-image-6162846" /></a><figcaption class="wp-caption-text">香港机场的国泰航空公司（Cathay Pacific Airways）班机 (JEWEL SAMAD/AFP/Getty Images)</figcaption></figure>
 <h3>美国周日新增48210例Covid-19病例</h3>
 <p>根据约翰-霍普金斯大学的数据，美国周日共诊断出48210例新的Covid-19病例，同时还报告新增388例与该病毒相关的死亡病例。</p>
 <p>根据该大学的统计，自疫情爆发以来，目前全美至少有8,154,594个感染Covid-19病例，以及至少有219,674人死亡。</p>
@@ -155,7 +165,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513884.md#1" target="_blank">中共用战争的方式进行土改和镇反</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/8/n11370721.md#1" target="_blank">爱德华?斯考特: 对迫害善良的一个政治上的回应</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/21/n10992445.md#1" target="_blank">（储安平之子）储望华：沉重的回忆</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/1/n10683927.md#1" target="_blank">一位中国乡下老师 获美国参众两院关注</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
