--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -228,7 +228,7 @@
 <p>美国防长埃斯珀表示，自瘟疫大流行爆发以来，在美国130万军人中，只有1名现役军人死于中共病毒。</p>
 <p>美国军队在全球范围内部署人员，遍及150个国家。根据国防人力数据中心数据，在国外有多达165,000名永久驻军。</p>
 <p>国防部在网站上列出了因COVID-19造成的8例军事人员死亡，但该数字包括警卫或预备役人员。</p>
-<p>一名现役军人是首席航空兵、现年41岁的查尔斯?罗伯特·沙克尔（Charles Robert Thacker Jr.）于4月去世。沙克尔在西奥多·罗斯福（Theodore Roosevelt）航母上任职。</p>
+<p>一名现役军人是首席航空兵、现年41岁的查尔斯·罗伯特·沙克尔（Charles Robert Thacker Jr.）于4月去世。沙克尔在西奥多·罗斯福（Theodore Roosevelt）航母上任职。</p>
 <p>“我们的感染率远低于美国人民，每一次、每一次损失都是可怕的，但是感谢上帝，我们只失去了一名现役军人，而且部队的表现还不错。” 埃斯珀说。</p>
 <p>埃斯珀补充说，军方对服役人员进行训练、治疗、追踪并要求遵循协议。</p>
 <p>“你必须能够胜任工作，而且我们所有人都有能力做到这一点，无论你是最低级别的人员还是国防部长，无论如何，国防部都时刻准备好，我们准备继续并确保我们完成任务。”他说。</p>
@@ -256,7 +256,7 @@
 <p>QVC是美国最大的电视购物公司，成立于1986年，总部位于美国宾夕法尼亚州威彻斯特，其旗下频道通过地面、卫星、有线电视及互联网面向全球多国播出。“QVC”的名称源自“Quality, Value, Convenience”（质量、价格、便捷）的首字母缩写。</p>
 <p>在不久前一个下午，有超过12,600名观众进入汤米·希尔费格（Tommy Hilfiger）网站，观看模特、网红和名人谈论该品牌的秋季系列。</p>
 <p>零售商试图吸引长期以来在QVC和家庭购物网络上流连的消费者。汤米·希尔费格（Tommy Hilfiger）和列维·斯特劳斯（Levi Strauss）等品牌希望不愿逛商店的购物者参加现场直播的在线销售活动，并在假期购物季节来临之前购买荷叶边衬衫、手袋和其它非必需品。</p>
-<p>观众可以在活动期间与演示者聊天，然后单击商品以将其添加到虚拟购物车中进行购买。汤米?希尔菲格（Tommy Hilfiger）的首席营销官迈克尔·施纳纳（Michael Scheiner）说，观众的许多疑问都与休闲装的趋势有关。</p>
+<p>观众可以在活动期间与演示者聊天，然后单击商品以将其添加到虚拟购物车中进行购买。汤米·希尔菲格（Tommy Hilfiger）的首席营销官迈克尔·施纳纳（Michael Scheiner）说，观众的许多疑问都与休闲装的趋势有关。</p>
 <p>Coresight Research预测，到2023年，美国的直播购物活动将产生250亿美元销售额。</p>
 <figure id="attachment_6541356" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2015/12/1512230920301973.jpg"><img class="size-large wp-image-6541356" src="https://i.epochtimes.com/assets/uploads/2015/12/1512230920301973-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">纽约梦幻圣诞夜 品味传统与时尚。纽约第五大道TOMMY HILFIGER 的圣诞灯饰。（戴兵／大纪元）</figcaption></figure>
 <h3>疫情期间 美国年轻人利用远程工作机会出游</h3>
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/4/n11566782.md#1" target="_blank">凌晓辉：当代人类的天书（二）</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/7/4/n3627160.md#1" target="_blank">心湖：中共是破坏道德的罪魁祸首</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/25/n10427499.md#1" target="_blank">严家伟：文革中的监狱往事</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/26/n4648466.md#1" target="_blank">在法轮大法中修炼重生的宁德人（二）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
