--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/3/n10020053.md#1" target="_blank">对知识份子的迫害——思想改造运动</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/25/n11213719.md#1" target="_blank">许茹：火灾爆炸频发京城连震 昭示奸佞当道</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11245419.md#1" target="_blank">长夜尽头 一缕金色的彩霞</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
