--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484524.md#1" title="疫情期间 大陆“罚款经济”愈发严重""><img width="73" src="https://i.epochtimes.com/assets/uploads/2011/03/1103102129062320-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484560.md#1" title="以色列和阿联酋加强合作 达成投资双边协议""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8RJ4QH-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://nsxsof363.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12486089.md#1">田云：推特涉嫌干预美大选 言论审查水多深？</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485937.md#1">台百岁人瑞：若中共打来 他拿拐杖跟阿共仔拼</a><br>
+:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12486027.md#1">丑闻爆发前 脸书推特高层加入拜登竞选团队</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12486089.md#1">田云：推特涉嫌干预美大选 言论审查水多深？</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485937.md#1">台百岁人瑞：若中共打来 他拿拐杖跟阿共仔拼</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485268.md#1">大陆居民消费率仅38.8% 内循环动力不足</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485038.md#1">新能源车垫砖头空跑 这家中共国企曾被指骗补</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485038.md#1">新能源车垫砖头空跑 这家中共国企曾被指骗补</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485685.md#1">中共部署东风17 苏贞昌：威胁区域平和</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485912.md#1">“原创”的反义词是啥？ 学生作业调侃“中国”</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
@@ -27,9 +27,9 @@
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482472.md#1">【拍案惊奇】拜登家族通共？习为何突然回京</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483265.md#1">中共高调反美 京沪托福考位名额5分钟抢光</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484117.md#1">涉习江斗还是怕“光明”光明乳业被罚引热议</a><br>
-<a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482193.md#1">前生意伙伴举报亨特 游说拜登白宫见中企官员</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483231.md#1">【珍言真语】桑普：习近平南巡 上演障眼法</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483109.md#1">中共发人质威胁信号 拟报复美起诉中共学者</a><br>
+<a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484351.md#1">【大陆新闻解毒】时事小品：习南巡 人算不如天算</a><br>
 <br><p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12483848.md#1">田云：电脑门发酵 拜登竞选经理自曝民调不实</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/14/n12474852.md#1">【内幕】吉林省应对美中贸易战措施曝光</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,804,383 人
+!共 365,805,059 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
