--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/17/n9856722.md#1" target="_blank">毛泽东诗词“假借祭祖 骗取民心”</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/27/n10746220.md#1" target="_blank">觅真：真诚的感恩浸透着民心所向</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/21/n10235717.md#1" target="_blank">袁斌：重温“革命烈士”夏明翰的《就义诗》（上）</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/26/n11280714.md#1" target="_blank">女裁缝的别样生意经</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
