--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/28/n10672001.md#1" target="_blank">袁斌：计划生育，酿成了多少灭绝人性的惨剧</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/15/n3683727.md#1" target="_blank">历史回顾：公安部给李洪志先生的感谢信</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180153.md#1" target="_blank">【征文】章阁：中国古代专制吗（上）</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/12/28/n4328405.md#1" target="_blank">云帆：从台北市长保护法轮功学员谈起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
