--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,6 +25,9 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>俄新增病例激增至近1.6万例 再创单日新高</h3>
+<p>俄罗斯官方的数据显示，周一（19日）该国单日新增病例激增至新高，达15,982例，其中包括首都莫斯科的5,376例，全国病例总数达到 1,415,316例。</p>
+<p>当局报告在过去24小时内新增179人死亡。至此，官方报告的死亡总数达到24,366人。</p>
 <h3>莱德斯罗杯橄榄球赛 超过4.6万名新西兰球迷入场观赛</h3>
 <p>在周日（10月18日）橄榄球布莱德斯罗杯（Bledisloe Cup）的第二场比赛中，新西兰队以27比7击败澳大利亚队。这场比赛的伊甸园球场出现了近乎满员的46,049名观众，这在2020年中是个不寻常的景象。</p>
 <p>上周日（10月11日）的第一场比赛在新西兰惠灵顿的天空体育场进行，吸引了31,000名球迷，澳大利亚队以16比16的比分战平新西兰队。</p>
@@ -165,7 +168,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/8/n9817759.md#1" target="_blank">袁斌：“十月革命”真相与俄国三大倒退</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/12/18/n3755139.md#1" target="_blank">佚名：迫害法轮功的中共人员犯了哪些法</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/21/n10730270.md#1" target="_blank">观雨堂主：“道德错乱”下的卞仲耘之死</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/5/n10955468.md#1" target="_blank">出版24年 42种语言 拥有全球读者的转法轮</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
