--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -20,7 +20,7 @@
 <strong><ahref="#_Toc2020101805">蓬佩奥：中共已经为瞒疫付出沉重代价</a></strong></p>
 <p>根据约翰·霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月17日下午1时，全球确诊感染<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数接近3,900万，死亡人数超过110万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>截至周五（10月16日）晚些时候，全球单日新增病例首破40万，其中欧洲新病例增幅最大，周五（10月16日）新增超15万病例。</p>
-<p>截至周六美东时间中午12：19，美国疾控中心（CDC）数据显示，美国确诊病例超过802.8万例，死亡超过21.79万人。过去七天每10万人平均有16.7人感染。</p>
+<p>截至周六美东时间中午12:19，美国疾控中心（CDC）数据显示，美国确诊病例超过802.8万例，死亡超过21.79万人。过去七天每10万人平均有16.7人感染。</p>
 <p>欧洲疫情爆发，新病例增长幅度已经超过美国。多国单日新病例创新高，比利时和奥地利外长纷纷染疫。</p>
 <p>美国总统川普（特朗普）再次表示，中共向世界释放病毒，美国将追责，让中共为美国的刺激法案资金买单。美国国务卿蓬佩奥也表示，中共已经为瞒疫付出沉重代价。</p>
 <p>=======================</p>
@@ -64,9 +64,9 @@
 <h3>纽约“红色区域”阳性率3.19% 整体阳性率为1.08%。</h3>
 <p>州长安德鲁·库默（Andrew Cuomo）周日宣布，纽约布鲁克林、皇后区、罗克兰和奥兰治县某些特定“红色区域”重点地区的平均COVID-19阳性率目前为3.19%，低于周六的4.34%。</p>
 <p>库默说，纽约的整体阳性率（包括红色区域）为1.08%。</p>
-<p>库默说，截至周六，又有1784名纽约人的COVID-19呈阳性反应，另有7人死亡。</p>
+<p>库默说，截至周六，又有1,784名纽约人的COVID-19呈阳性反应，另有7人死亡。</p>
 <h3>意大利新增病例连续第5天上升</h3>
-<p>意大利国家民防局周日表示，意大利已经连续第五天录得创纪录的每日新增阳性病例，共有11705例。</p>
+<p>意大利国家民防局周日表示，意大利已经连续第五天录得创纪录的每日新增阳性病例，共有11,705例。</p>
 <p>在过去的24小时内，又有69人死亡，使死亡人数达到36,543。</p>
 <p>周日ICU病房增加了45人，目前共有750名中共病毒患者在ICU中治疗。</p>
 <p><a name="_Toc2020101812"></a></p>
@@ -134,7 +134,7 @@
 <p>研究人员说，病毒基因测序结果显示，她两次感染的中共病毒毒株存在差别，所以表明是二次感染。</p>
 <h3>新西兰总理表示希望三周内组成新政府</h3>
 <p>新西兰总理雅辛达·阿德恩（Jacinda Ardern）周日表示，在大选中获胜后，她将在三周内组建政府，但拒绝透露她将独自统治还是成立联盟。</p>
-<p>昨天（17日），阿德恩所在的左翼工党赢得了半个世纪以来最大的选举胜利。这是自从新西兰于1996年采用比例投票制以来，该党在议席中占据超过半数的多数席位（120个席位中，左翼工党占64个席位）。这将使阿德恩能够组建第一个单党政府。</p>
+<p>10月17日，阿德恩所在的左翼工党赢得了半个世纪以来最大的选举胜利。这是自从新西兰于1996年采用比例投票制以来，该党在议席中占据超过半数的多数席位（120个席位中，左翼工党占64个席位）。这将使阿德恩能够组建第一个单党政府。</p>
 <p>阿德恩在奥克兰家的附近一咖啡馆里说，她希望在三周内能组成新政府，并优先处理中共肺炎疫情情况。</p>
 <p>自中共肺炎疫情大流行以来，新西兰仅有1,886例确诊病例，25例死亡病例。</p>
 <h3>泰国新增3例本土病例</h3>
@@ -185,7 +185,7 @@
 <p>抗议者认为COVID-19限制是不必要的，并且侵犯了他们的人权。有些人反对戴口罩和接种疫苗。</p>
 <p>有些人举着标语说：“我的身体我的选择，不要强制面具”。</p>
 <p>截至周六，英国57%的人口生活在更为严格的COVID-19限制之下。</p>
-<figure id="attachment_12483696" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_8TA93D.jpg"><img class="wp-image-12483696 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8TA93D-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">周六（10月17日），英国示威者聚集在伦敦市中心，反对英国实施封锁措施。(JUSTIN TALLIS/AFP)</figcaption></figure>
+<figure id="attachment_12483696" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_8TA93D.jpg"><img class="wp-image-12483696 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8TA93D-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年10月17日，英国示威者聚集在伦敦市中心，反对英国实施封锁措施。(JUSTIN TALLIS/AFP)</figcaption></figure>
 <h3>俄亥俄州新病例破2,000</h3>
 <p>俄亥俄州周六（10月17日）打破单日新病例纪录，且连续第四天每天超过2,000例感染。<br />
 周六。该州报告2234人被感染，病例总计180,225人。该州在过去三周中增加了30,000病例，平均每天增加1,439例。</p>
@@ -196,18 +196,18 @@
 <figure id="attachment_12478351" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1224683910-1200x800.jpg"><img class="size-large wp-image-12478351" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1224683910-1200x800-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">位于印第安那州，彻斯特顿市的O&#8217;Gara and Wilson Antiquarian Booksellers古书收藏，店橱窗上的标语：“入内请戴面罩。”(Scott Olson/Getty Images)</figcaption></figure>
 <p><a name="_Toc2020101807"></a></p>
 <h3>美国大草原州病例增幅大</h3>
-<p>截至周六美东时间中午12：19，美国疾控中心（CDC）数据显示，过去七天每10万人平均有16.7人感染。</p>
+<p>截至周六美东时间中午12:19，美国疾控中心（CDC）数据显示，过去七天每10万人平均有16.7人感染。</p>
 <p>根据约翰·霍普金斯的数据，美国平均每天新增约55,000病例，与一周前相比增长了16%以上。北达科他州、南达科他州、蒙大拿州和威斯康星州每10万居民中感染人数达最高。</p>
 <p>疫情在某些州变得严重。威斯康星州州长托尼·埃弗斯（Tony Evers）于本周在州立博览会公园启用另一家护理设施，该设施向染疫患者开放。</p>
 <p>在北达科他州，病例数比一周前增长了近34%，当地官员担心一些医院可能没有足够人员来治疗重症者。</p>
 <p>今年春天，美国疫情最严重的州在东北部各州和西部的加州，夏季则是阳光地带的州病例激增。</p>
 <p>根据约翰·霍普金斯大学和彭博社汇编的数据，周五美国新病例增加69,276，是连续第四天上升，并且是7月29日以来的最高纪录。</p>
-<figure id="attachment_12483331" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1279400361.jpg"><img class="wp-image-12483331 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1279400361-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">10月9日，威斯康星州国家警卫队成员在为民众进行测试。(Scott Olson/Getty Images)</figcaption></figure>
+<figure id="attachment_12483331" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1279400361.jpg"><img class="wp-image-12483331 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1279400361-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年10月9日，威斯康星州国家警卫队成员在为民众进行测试。(Scott Olson/Getty Images)</figcaption></figure>
 <h3>斯洛伐克民众抗议防疫限制</h3>
 <p>斯洛伐克爆发首个反对防疫限制的大规模抗议活动，数百名示威者反对强制性戴口罩和其它限制，抗议活动还引发暴力袭击警察。</p>
 <p>抗议人群聚集在首都布拉迪斯拉发（Bratislava）的政府办公室前，因为违反六人禁令，警察用水枪和胡椒喷雾驱散人群。警方称“数”人被拘留。</p>
 <p>周五（10月16日），该国记录了1,968新病例，有11人死亡。本月，政府禁止所有公共活动，关闭酒吧和餐馆，并要求在户外佩戴口罩。</p>
-<figure id="attachment_12483590" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_8TB6AN.jpg"><img class="wp-image-12483590 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8TB6AN-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">10月17日，抗议人群聚集在首都布拉迪斯拉发（Bratislava）的政府办公室前，因为违反六人禁令，警察用水枪和胡椒喷雾驱散人群。警方称“数”人被拘留。(VLADIMIR SIMICEK/AFP)</figcaption></figure>
+<figure id="attachment_12483590" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_8TB6AN.jpg"><img class="wp-image-12483590 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8TB6AN-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年10月17日，抗议人群聚集在首都布拉迪斯拉发（Bratislava）的政府办公室前，因为违反六人禁令，警察用水枪和胡椒喷雾驱散人群。警方称“数”人被拘留。(VLADIMIR SIMICEK/AFP)</figcaption></figure>
 <h3>法国单日新增三万多病例 创纪录</h3>
 <p>法国周六（10月16日）报告称，在过去24小时内，有32,427新病例。</p>
 <p>政府已于周六在巴黎地区和其它八个大都市地区实施宵禁，从晚上9点开始将人们限制在家中，直到凌晨6点，持续四个星期。</p>
@@ -229,7 +229,7 @@
 <p>美国军队在全球范围内部署人员，遍及150个国家。根据国防人力数据中心数据，在国外有多达165,000名永久驻军。</p>
 <p>国防部在网站上列出了因COVID-19造成的8例军事人员死亡，但该数字包括警卫或预备役人员。</p>
 <p>一名现役军人是首席航空兵、现年41岁的查尔斯·罗伯特·沙克尔（Charles Robert Thacker Jr.）于4月去世。沙克尔在西奥多·罗斯福（Theodore Roosevelt）航母上任职。</p>
-<p>“我们的感染率远低于美国人民，每一次、每一次损失都是可怕的，但是感谢上帝，我们只失去了一名现役军人，而且部队的表现还不错。” 埃斯珀说。</p>
+<p>“我们的感染率远低于美国人民，每一次、每一次损失都是可怕的，但是感谢上帝，我们只失去了一名现役军人，而且部队的表现还不错。”埃斯珀说。</p>
 <p>埃斯珀补充说，军方对服役人员进行训练、治疗、追踪并要求遵循协议。</p>
 <p>“你必须能够胜任工作，而且我们所有人都有能力做到这一点，无论你是最低级别的人员还是国防部长，无论如何，国防部都时刻准备好，我们准备继续并确保我们完成任务。”他说。</p>
 <figure id="attachment_12478868" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1226032125.jpg"><img class="wp-image-12478868 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1226032125-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">美国防部长埃斯珀（Mark Esper）资料图。(SAUL LOEB/AFP via Getty Images)</figcaption></figure>
@@ -250,7 +250,7 @@
 <p>餐馆的共同所有者路珍妮（Jenny Lu）告诉CTV新闻，该客户上周五晚上买了这瓶酒，因为他听说渥太华将采取更加严格的抗疫措施，并且该餐厅至少必须在接下来28天关闭室内用餐。</p>
 <p>路珍妮说，当顾客留下700美元小费时，工作人员甚至流下眼泪。</p>
 <p>像许多其它餐馆一样，这家餐馆也在疫情下挣扎。路珍妮告诉CTV新闻，她想保留工作人员，但是饭厅不开业就很难。</p>
-<figure id="attachment_7579234" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/04/Fotolia_77738431_Subaion_L.jpg"><img class="wp-image-7579234 size-large" src="https://i.epochtimes.com/assets/uploads/2016/04/Fotolia_77738431_Subaion_L-600x452.jpg" alt="" width="600" b="452" /></a><figcaption class="wp-caption-text">示意图。(fotolia)</figcaption></figure>
+<figure id="attachment_7579234" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/04/Fotolia_77738431_Subaion_L.jpg"><img class="wp-image-7579234 size-large" src="https://i.epochtimes.com/assets/uploads/2016/04/Fotolia_77738431_Subaion_L-600x452.jpg" alt="" width="600" b="452" /></a><figcaption class="wp-caption-text">示意图。(Fotolia)</figcaption></figure>
 <h3>疫情影响 美国品牌尝试电视购物</h3>
 <p>为了吸引居家购物者，一些品牌正在复制QVC。</p>
 <p>QVC是美国最大的电视购物公司，成立于1986年，总部位于美国宾夕法尼亚州威彻斯特，其旗下频道通过地面、卫星、有线电视及互联网面向全球多国播出。“QVC”的名称源自“Quality, Value, Convenience”（质量、价格、便捷）的首字母缩写。</p>
@@ -282,34 +282,40 @@
 
 
 <strong>相关新闻：</strong>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12486161.md#1">日本研究机构遭网攻 疑中共骇客窃疫苗情报</a></li>
 <li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a></li>
 <li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482137.md#1">【最新疫情10.19】川普：勿忘病毒来自中国</a></li>
 <li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485442.md#1">华为大势已去？跨大西洋联盟打造清洁网络</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484974.md#1">抗共大事记：中共挑衅西方 加国罕见狠批北京 (10/12-10/18)</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10185925.md#1" target="_blank">名为开放实为开抢的邓小平理论 (下)</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489263.md#1" target="_blank">伦敦盛大游行 34国法轮功学员吁停止迫害</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10965227.md#1" target="_blank">林启山：刘义元卖妻</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/27/n10746220.md#1" target="_blank">觅真：真诚的感恩浸透着民心所向</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/9/17/n12411954.md#1">东西方地狱见闻 邪淫者的悲声</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484332.md#1">【严真点评&amp;外交部大实话】拜登家丑闻 习南巡</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485056.md#1">【薇羽看世间】习近平南巡谈改革 走入死胡同</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481651.md#1">【新闻看点】习突返京或3原因 拜登家丑闻连爆</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481456.md#1">刘诗诗自曝不愿上综艺 个中原因令人吃惊</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481895.md#1">传周星驰重金续约林允 为对赌协议添保障</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12480422.md#1">宝特瓶当水壶 10岁女童皮肤流汤、月经提早来</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/6/n12455916.md#1">运动后吃对修复肌肉、改善疲劳 营养师推3食谱</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481202.md#1">换季流鼻水、皮肤痒？过敏自救有一套</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/16/n12481545.md#1">自制3杯天然运动饮料 提升免疫力、改善疲劳</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484089.md#1">两大一小的白鲸搁浅 俄罗斯男子花7小时营救</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nsxsof363/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nsxsof363/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/11/n12468511.htm">【最新疫情10.18】欧美病例激增 但死亡人数少</a></p><hr>
