--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -171,7 +171,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/14/n11939875.md#1" target="_blank">“红色殿堂”里的刀光剑影</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/28/n11751711.md#1" target="_blank">张林：青少年被迫加入抗美援朝志愿军</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/24/n4647598.md#1" target="_blank">在法轮大法修炼中重生的宁德人（一）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
