--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -9,14 +9,14 @@
 	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/nsxsof363/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101909">川普：不会忘记病毒来自中国</a></strong><br />
+<p><strong><ahref="#_Toc2020101910">全球病例总数突破4千万 死亡逾111万</a></strong><br />
+<strong><ahref="#_Toc2020101909">川普：不会忘记病毒来自中国</a></strong><br />
 <strong><ahref="#_Toc2020101908">美国南部州经济复苏快</a></strong><br />
 <strong><ahref="#_Toc2020101907">欧洲多地爆发抵制防疫措施抗议活动</a></strong><br />
 <strong><ahref="#_Toc2020101906">南非卫生部长病毒测试呈阳性</a></strong><br />
 <strong><ahref="#_Toc2020101904">IMF：全面封锁可能性较小</a></strong><br />
 <strong><ahref="#_Toc2020101903">疫情导致加拿大人口增长停滞</a></strong><br />
-<strong><ahref="#_Toc2020101902">瘟疫大流行冲击供应链 多国开始屯粮</a></strong><br />
-<strong><ahref="#_Toc2020101901">疫情持续大半年 跨国航空旅行仍困难重重</a></strong></p>
+<strong><ahref="#_Toc2020101902">瘟疫大流行冲击供应链 多国开始屯粮</a></strong></p>
 <p>根据约翰?霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月18日下午1时，全球确诊感染<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数已突破4,000万，死亡人数超过111万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>美国确诊病例超过808万例，死亡超过21.8万人。美东时间周日（10月18日）中午12点21分，美国疾控中心（CDC）数据显示，全美在过去24小时新增53,157病例，死亡593人。每10万人感染人数最多的州是北达科他州、南达科他州、蒙大拿州和威斯康星州。</p>
 <p>欧洲疫情爆发，新病例增长幅度已经超过美国。周日意大利新增病例达11,705，创下纪录，重症室人数也是10天前的2倍。国际货币基金组织表示，全面封锁的可能性不大。</p>
@@ -25,9 +25,11 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
-<h3>全球染疫总人数突破4千万</h3>
+<p><a name="_Toc2020101910"></a></p>
+<h3>全球病例总数突破4千万 死亡逾111万</h3>
 <p>根据约翰·霍普金斯大学（Johns Hopkins University）的统计，全球中共病毒病例总数已突破4千万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
-<p>截至周一（19日），全球感染总人数达到39,965,414人，死亡总人数达到1,113,352人。</p>
+<p>截至周一（19日），全球感染总人数达到40,050,902人，死亡总人数达到1,113,750人。</p>
+<p>死亡人数最高的国家是美国，其次是巴西和印度（中国和印度未列入此排名）。</p>
 <h3>俄新增病例激增至近1.6万例 再创单日新高</h3>
 <p>俄罗斯官方的数据显示，周一（19日）该国单日新增病例激增至新高，达15,982例，其中包括首都莫斯科的5,376例，全国病例总数达到 1,415,316例。</p>
 <p>当局报告在过去24小时内新增179人死亡。至此，官方报告的死亡总数达到24,366人。</p>
@@ -171,7 +173,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/17/n9856722.md#1" target="_blank">毛泽东诗词“假借祭祖 骗取民心”</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/28/n11751194.md#1" target="_blank">【2019盘点】响彻世界政坛的正义之声</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015819.md#1" target="_blank">文武：中共篡政（二）</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/8/2/n2983321.md#1" target="_blank">诚宇：捅破心灵的那层窗户纸</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
